--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <div class="navbar">
+        <nav>
+            <a href="#backgr">Background</a>
+            <a href="#projects">Projects</a>
+            <a href="#content">Content</a>
+        </nav>
+    </div>
     <header>
         <div>
             <h1>LASZLO MAJSAI</h1>
@@ -23,11 +30,11 @@
         <img src="img/profkep.jpg" id="profile" alt="ProfilePic">
     </header>
     <main>
-        <div class="background">
+        <div class="background" id="backgr">
             <h3>BACKGROUND</h3>
             <img src="img/background.png" id="background" alt="Background">
         </div>
-        <div class="projects">
+        <div class="projects" id="projects">
             <h3>PROJECTS</h3>
             <table>
                 <thead>
@@ -78,7 +85,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="content">
+        <div class="content" id="content">
             <h3>CONTENT</h3>
             <nav>
                 <div class="contentimage">
@@ -104,7 +111,7 @@
             </nav>
         </div>
         <section id="excercise">
-            <div class="excercise">
+            <div class="projectimg">
                 <h2>Product design Excercise</h2>
                 <p>For this assignment we were given a phenomena of nature which inspires us to design some kind of
                     display. Mine was
@@ -119,7 +126,7 @@
         </section>
         <section id="map">
             <img src="img/interactivemap.png" alt="Map">
-            <div class="map">
+            <div class="projectimg">
                 <h2>Interactive Map</h2>
                 <p>This was the main project during my Erasmus semester in the Netherlands. I was in a group of
                     three, and our project was to design a tool or a system for the university’s new building, which
@@ -129,7 +136,7 @@
             </div>
         </section>
         <section id="data">
-            <div class="data">
+            <div class="projectimg">
                 <h2>Data Visualization</h2>
                 <p>This project was made for a one week long course at my university. In this programme, we studied
                     the latest and most experimental methods of data visualization. At the end of the week, we had
@@ -140,7 +147,7 @@
         </section>
         <section id="smoke">
             <img src="img/smoke.png" alt="Smoke">
-            <div class="smoke">
+            <div class="projectimg">
                 <h2>Smoke Quitting App</h2>
                 <p>This concept is made for a course called “Designing positive technology tools”. The goal of the
                     class was to choose a mental health issue and design an app or any digital platform, that can
@@ -151,7 +158,7 @@
             </div>
         </section>
         <section id="news">
-            <div class="news">
+            <div class="projectimg">
                 <h2>Newsplatform App</h2>
                 <p>This was our biggest project during last semester. We were given four issues, that are common in
                     the rural area of Hungary, and we had to make a concept of a digital tool, that can help solving
@@ -162,17 +169,16 @@
             <img src="img/news.png" alt="News">
         </section>
         <section id="contact">
-            <h4>Contact</h4>
+            <h3>CONTACT</h3>
             <nav>
                 <ul>
-                    <li><a href="form.html">Contact Me!</a></li>
+                    <li><a href="form.html" class="formlink">Contact Me!</a></li>
                 </ul>
             </nav>
         </section>
     </main>
     <footer>
-        <p>majsai.laci98@gmail.com</p>
-        <p>+36 30 661 0734</p>
+        <p>@2025 Majsai László. All rights reserved.</p>
     </footer>
 </body>
 
